--- a/src/styles/MainNavigation.css
+++ b/src/styles/MainNavigation.css
@@ -1,6 +1,6 @@
 .header {
   overflow: hidden;
-  width: 100%;
+  width: 100vw;
   height: 5rem;
   display: flex;
   align-items: center;
@@ -22,6 +22,8 @@
   padding: 30px;
   display: flex;
   align-items: baseline;
+
+
 }
 
 .header li {
